--- a/GriefGroceryStore/.classpath
+++ b/GriefGroceryStore/.classpath
@@ -8,18 +8,18 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="F:/Coding/Java/Eclipse/workplace/GriefGroceryStore/WebContent/WEB-INF/lib/commons-beanutils-1.7.0.jar"/>
-	<classpathentry kind="lib" path="F:/Coding/Java/Eclipse/workplace/GriefGroceryStore/WebContent/WEB-INF/lib/commons-collections-3.1.jar"/>
-	<classpathentry kind="lib" path="F:/Coding/Java/Eclipse/workplace/GriefGroceryStore/WebContent/WEB-INF/lib/commons-fileupload-1.2.2.jar"/>
-	<classpathentry kind="lib" path="F:/Coding/Java/Eclipse/workplace/GriefGroceryStore/WebContent/WEB-INF/lib/commons-io-1.4.jar"/>
-	<classpathentry kind="lib" path="F:/Coding/Java/Eclipse/workplace/GriefGroceryStore/WebContent/WEB-INF/lib/commons-lang-2.5.jar"/>
-	<classpathentry kind="lib" path="F:/Coding/Java/Eclipse/workplace/GriefGroceryStore/WebContent/WEB-INF/lib/commons-logging.jar"/>
-	<classpathentry kind="lib" path="F:/Coding/Java/Eclipse/workplace/GriefGroceryStore/WebContent/WEB-INF/lib/ezmorph-1.0.3.jar"/>
-	<classpathentry kind="lib" path="F:/Coding/Java/Eclipse/workplace/GriefGroceryStore/WebContent/WEB-INF/lib/json-lib-2.1-jdk15.jar"/>
-	<classpathentry kind="lib" path="F:/Coding/Java/Eclipse/workplace/GriefGroceryStore/WebContent/WEB-INF/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="F:/Coding/Java/Eclipse/workplace/GriefGroceryStore/WebContent/WEB-INF/lib/jstl.jar"/>
-	<classpathentry kind="lib" path="F:/Coding/Java/Eclipse/workplace/GriefGroceryStore/WebContent/WEB-INF/lib/mysql-connector-java-5.0.8-bin.jar"/>
-	<classpathentry kind="lib" path="F:/Coding/Java/Eclipse/workplace/GriefGroceryStore/WebContent/WEB-INF/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="F:/Coding/Java/Eclipse/workplace/GriefGroceryStore/WebContent/WEB-INF/lib/standard.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-beanutils-1.7.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-collections-3.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-fileupload-1.2.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-io-1.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-lang-2.5.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-logging.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/ezmorph-1.0.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json-lib-2.1-jdk15.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jstl.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.0.8-bin.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/standard.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
